--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,31 @@
-.header-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: rem(36);
+.header-title {
+    font-family: 'Inter', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
-.header-title {
-    color: grey 
+h1 {
+    margin-bottom: 5px;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+h2 {
+    margin-top: 5px;
+    font-size: 20px;
+    font-weight: 400;
 }
 
 .map-container {
     width: 100%;
-    height: 600px;
+    height: 610px;
 }
 
 #map { 
     width: 100%;
     height: 600px; 
 }
+  
+  /* Drop shadow for the markers */
+  .leaflet-marker-icon {
+    filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.9));
+  }
